force-app/main/default/objects/Fee__c/Fee__c.object-meta.xml
<CustomObject>
    <description>Allows recording of fees</description>
    <label>Fee</label>
    <nameField>
        <displayFormat>Fee-{00000000}</displayFormat>
        <label>Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>