force-app/main/default/objects/Fee__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advice this relates to</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>