force-app/main/default/objects/Fee__c/fields/AmountReceived__c.field-meta.xml
<CustomField>
    <fullName>AmountReceived__c</fullName>
    <description>This is the actual fee amount received</description>
    <label>Amount received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>