force-app/main/default/objects/Fee__c/fields/AppliesToLegacy__c.field-meta.xml
<CustomField>
    <fullName>AppliesToLegacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the product which the fee is in relation to</description>
    <inlineHelpText>This is the product which the fee is in relation to</inlineHelpText>
    <label>Applies to</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Fees as a result of this account</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>