force-app/main/default/objects/Fee__c/fields/AppliesToRecommendation__c.field-meta.xml
<CustomField>
    <fullName>AppliesToRecommendation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The recommendation which, when accepted, will produce the product that this is related to</description>
    <inlineHelpText>The recommendation which, when accepted, will produce the product that this is related to</inlineHelpText>
    <label>Applies to recommendation</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Fees as a result of this account</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>