force-app/main/default/objects/Fee__c/fields/DateOfSubmission__c.field-meta.xml
<CustomField>
    <fullName>DateOfSubmission__c</fullName>
    <description>This is the date that the platform was notified this fee should be taken</description>
    <inlineHelpText>This is the date that the platform was notified this fee should be taken</inlineHelpText>
    <label>Date of submission</label>
    <type>Date</type>
</CustomField>