force-app/main/default/objects/Fee__c/fields/Dependencydel__c.field-meta.xml
<CustomField>
    <fullName>Dependencydel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replaced.
This is the recommendation that needs to be accepted before this fee has a product which it can be taken from</description>
    <label>Dependency</label>
    <referenceTo>Recommendation</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>