force-app/main/default/objects/Fee__c/fields/FeeFriendlyText__c.field-meta.xml
<CustomField>
    <fullName>FeeFriendlyText__c</fullName>
    <description>Formula field to display a friendly text version of the fee</description>
    <formula>IF(  StandardModel__c , &quot;Standard model&quot;, 
  IF(  ISPICKVAL( FeeModel__r.Format__c , &quot;Fixed amount&quot;), &quot;£&quot; +  TEXT(FixedFee__c) ,  TEXT(PercentageFee__c) + &quot;%&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee</label>
    <type>Text</type>
</CustomField>