force-app/main/default/objects/Fee__c/fields/FeeModel__c.field-meta.xml
<CustomField>
    <fullName>FeeModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The type of fee this is</description>
    <label>Fee model</label>
    <referenceTo>FeeModel__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>