force-app/main/default/objects/Fee__c/fields/FixedFee__c.field-meta.xml
<CustomField>
    <fullName>FixedFee__c</fullName>
    <description>This is the pound amount if the fee is in the form of a fixed amount, after any discounts have been applied</description>
    <label>Fixed fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>