force-app/main/default/objects/Fee__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment which will result in this fee being applied</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfilment__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>