force-app/main/default/objects/Fee__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(NOT(ISBLANK(Advice__r.Advice_Household__r.OctopusMoneyRecord__c)), CASESAFEID(Advice__r.Advice_Household__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>