force-app/main/default/objects/Fee__c/fields/StandardModel__c.field-meta.xml
<CustomField>
    <fullName>StandardModel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this fee is the standard model</description>
    <label>Standard model</label>
    <type>Checkbox</type>
</CustomField>