force-app/main/default/objects/Fee__c/fields/TakenFromLegacy__c.field-meta.xml
<CustomField>
    <fullName>TakenFromLegacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the account the fee should be taken from</description>
    <label>Taken from</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Fees taken from this account</relationshipLabel>
    <relationshipName>Fees1</relationshipName>
    <type>Lookup</type>
</CustomField>