force-app/main/default/objects/Fee__c/fields/TakenFromRecommendation__c.field-meta.xml
<CustomField>
    <fullName>TakenFromRecommendation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The recommendation which, when accepted, will produce the product that this is to be taken from</description>
    <inlineHelpText>The recommendation which, when accepted, will produce the product that this is to be taken from</inlineHelpText>
    <label>Taken from recommendation</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Fees taken from this account</relationshipLabel>
    <relationshipName>Fees1</relationshipName>
    <type>Lookup</type>
</CustomField>